--- a/Turfapp/templates/player_booking.html
+++ b/Turfapp/templates/player_booking.html
@@ -937,7 +937,7 @@
                 {% if request.user.role == 'admin' %}
                 <li><a href="{% url 'admin_dashboard' %}">home</a></li>
                 {%else%}
-                <li><a href="{% url 'home' %}">home</a></li>
+                <li><a href="{% url 'home' %}">Home</a></li>
                 {% endif %}
                 <li><a href="{% url 'turfs' %}">Turfs</a></li>
                 <li><a href="{% url 'player_booking' %}" class="active">My Bookings</a></li>
